removed use of DTO and added User domain, repo and service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,4 @@ spring:
   h2.console.enabled: true
   hibernate.jpa.ddl-auto: create-drop
 
-logging.level.org.hibernate.SQL: INFO
+logging.level.org.hibernate.SQL: DEBUG
