--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ targetCompatibility = 1.8
 dependencies {
 
     compile("org.scala-lang:scala-library:2.11.5")
+    compile("org.scala-lang:scala-reflect:2.11.5")
+
+    compile("com.google.code.gson:gson:2.4")
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
