corrected property name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.hibarnate.jpa.ddl-auto=create-drop
-#spring.hibarnate.jpa.ddl-auto=create
+#spring.jpa.hibarnate.ddl-auto=create-drop
+spring.jpa.hibarnate.ddl-auto=
 spring.h2.console.enabled=true
 
 
