--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
 spring:
   profiles: unit-test
   h2.console.enabled: true
-  hibernate.jpa.ddl-auto: create-drop
+  jpa.hibernate.ddl-auto:
 
 logging.level.org.hibernate.SQL: DEBUG
