--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.6.RELEASE")
@@ -24,6 +25,7 @@ apply plugin: 'spring-boot'
 
 repositories {
     mavenCentral()
+
 }
 
 sourceCompatibility = 1.8
@@ -45,6 +47,11 @@ dependencies {
     compile("com.h2database:h2")
     // end::actuator[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
+
+    compile 'io.springfox:springfox-swagger2:2.0.1'
+    compile 'io.springfox:springfox-swagger-ui:2.0.1'
+    //compile "io.springfox:springfox-swagger2:2.2.1"
+    //compile 'io.springfox:springfox-swagger-ui:2.2.1'
 }
 
 task wrapper(type: Wrapper) {
