--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     // end::actuator[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
-    compile 'io.springfox:springfox-swagger2:2.0.1'
-    compile 'io.springfox:springfox-swagger-ui:2.0.1'
+    compile("io.springfox:springfox-swagger2:2.0.1")
+    compile("io.springfox:springfox-swagger-ui:2.0.1")
     //compile "io.springfox:springfox-swagger2:2.2.1"
     //compile 'io.springfox:springfox-swagger-ui:2.2.1'
 }
