--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     compile("io.springfox:springfox-swagger2:2.0.1")
     compile("io.springfox:springfox-swagger-ui:2.0.1")
+    compile("com.fasterxml.jackson.module:jackson-module-scala_2.11:2.6.3")
     //compile "io.springfox:springfox-swagger2:2.2.1"
     //compile 'io.springfox:springfox-swagger-ui:2.2.1'
 }
