--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile("com.fasterxml.jackson.module:jackson-module-scala_2.11:2.6.3")
     //compile "io.springfox:springfox-swagger2:2.2.1"
     //compile 'io.springfox:springfox-swagger-ui:2.2.1'
+    compile("org.apache.commons:commons-lang3:3.4")
 }
 
 task wrapper(type: Wrapper) {
