--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     //compile "io.springfox:springfox-swagger2:2.2.1"
     //compile 'io.springfox:springfox-swagger-ui:2.2.1'
     compile("org.apache.commons:commons-lang3:3.4")
+    compile("javax.xml.bind:jaxb-api:2.2.12")
+    compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3")
+
 }
 
 task wrapper(type: Wrapper) {
