added support for favorite trips

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
 spring:
   profiles: unit-test
   h2.console.enabled: true
-  jpa.hibernate.ddl-auto:
+  jpa.hibernate.ddl-auto: none
 
 logging.level.org.hibernate.SQL: DEBUG
