--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #spring.jpa.hibarnate.ddl-auto=create-drop
-spring.jpa.hibarnate.ddl-auto=
+spring.jpa.hibarnate.ddl-auto=none
 spring.h2.console.enabled=true
 
 
