--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile("com.h2database:h2")
     // end::actuator[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.apache.httpcomponents:httpclient:4.5.1")
+    testCompile("org.apache.httpcomponents:httpmime:4.5.1")
 
     compile("io.springfox:springfox-swagger2:2.0.1")
     compile("io.springfox:springfox-swagger-ui:2.0.1")
