--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     compile("org.apache.commons:commons-lang3:3.4")
     compile("javax.xml.bind:jaxb-api:2.2.12")
     compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3")
+    compile("commons-fileupload:commons-fileupload:1.3.1")
+    compile("com.cloudinary:cloudinary-http44:1.2.2")
 
 }
 
