--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3")
     compile("commons-fileupload:commons-fileupload:1.3.1")
     compile("com.cloudinary:cloudinary-http44:1.2.2")
+    compile("org.apache.velocity:velocity:1.7")
+
 
 }
 
