--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile("commons-fileupload:commons-fileupload:1.3.1")
     compile("com.cloudinary:cloudinary-http44:1.2.2")
     compile("org.apache.velocity:velocity:1.7")
+    compile("com.sendgrid:sendgrid-java:2.2.1")
 
 
 }
