--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,10 @@ buildscript {
     }
 }
 
-group = 'myorg'
+group = 'com.roamy'
 version = '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-apply plugin: 'scala'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
@@ -47,10 +46,9 @@ dependencies {
 
     compile("io.springfox:springfox-swagger2:2.0.1")
     compile("io.springfox:springfox-swagger-ui:2.0.1")
-    compile("com.fasterxml.jackson.module:jackson-module-scala_2.11:2.6.3")
+    compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3")
     compile("org.apache.commons:commons-lang3:3.4")
     compile("javax.xml.bind:jaxb-api:2.2.12")
-    compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3")
     compile("commons-fileupload:commons-fileupload:1.3.1")
     compile("com.cloudinary:cloudinary-http44:1.2.2")
     compile("org.apache.velocity:velocity:1.7")
