--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,10 @@
 spring:
-  profiles.active: unit-test
+  profiles.active: dev
+
 ---
+
 spring:
   profiles: default
----
-spring:
-  profiles: unit-test
-  h2.console.enabled: true
-  jpa.hibernate.ddl-auto: none
-
-logging.level.org.hibernate.SQL: DEBUG
 
 multipart:
   maxFileSize: 5000KB
@@ -18,3 +13,48 @@ multipart:
 razorpay:
   key-id: rzp_test_aoq1vFZS49sAlN
   key-secret: y1hIwOiePI3N3Ruaj7dsu53z
+
+---
+
+spring:
+  profiles: unit-test
+  h2.console.enabled: true
+  jpa.hibernate.ddl-auto: create
+  jpa.properties.hibernate.default_schema: roamy
+
+hibernate:
+  default_schema: roamy
+
+logging.level.org.hibernate.SQL: DEBUG
+
+---
+
+spring:
+  profiles: dev
+  jpa.generate-ddl: false
+  jpa.hibernate.ddl-auto:
+  datasource.initialize: false
+  datasource.url: jdbc:mysql://l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/avh2fhkb22dm0j8k
+  datasource.username: z9td61e4pbq5xu01
+  datasource.password: t4kmyhxgoblzgyeb
+  datasource.driver-class-name: com.mysql.jdbc.Driver
+
+logging.level.org.hibernate.SQL: DEBUG
+
+---
+
+spring:
+  profiles: uat
+  jpa.generate-ddl: false
+  jpa.hibernate.ddl-auto:
+  datasource.initialize: false
+  datasource.url: jdbc:mysql://l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/avh2fhkb22dm0j8k
+  datasource.username: z9td61e4pbq5xu01
+  datasource.password: t4kmyhxgoblzgyeb
+  datasource.driver-class-name: com.mysql.jdbc.Driver
+
+logging.level.org.hibernate.SQL: DEBUG
+
+
+
+
