added support for mysql db

--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,11 @@ dependencies {
     }
     compile("org.springframework.boot:spring-boot-starter-jetty")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
     //compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("com.h2database:h2")
+    compile("mysql:mysql-connector-java:5.1.36")
     // end::actuator[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.apache.httpcomponents:httpclient:4.5.1")
