--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 spring:
-  profiles.active: dev
+  profiles.active: unit-test
 
 ---
 
 spring:
   profiles: default
+  datasource:
+    testOnBorrow: true
+    validationQuery: SELECT 1
 
 multipart:
   maxFileSize: 5000KB
