--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
   profiles: unit-test
   jpa:
     generate-ddl: true
-    hibernate.ddl-auto: create
+    hibernate.ddl-auto:
   h2.console.enabled: true
 
 logging.level.org.hibernate.SQL: DEBUG
