--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,11 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-cache")
     compile("com.h2database:h2")
     compile("mysql:mysql-connector-java:5.1.36")
+    compile("javax.cache:cache-api")
+    compile("com.hazelcast:hazelcast")
     // end::actuator[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.apache.httpcomponents:httpclient:4.5.1")
