--- a/build.gradle
+++ b/build.gradle
@@ -40,19 +40,22 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-cache")
+
     compile("com.h2database:h2")
     compile("mysql:mysql-connector-java:5.1.36")
-    compile("com.hazelcast:hazelcast")
-    // end::actuator[]
+
+    compile("javax.cache:cache-api")
+    compile("org.ehcache:ehcache:3.0.0")
+
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.apache.httpcomponents:httpclient:4.5.1")
     testCompile("org.apache.httpcomponents:httpmime:4.5.1")
+    compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3")
+    compile("javax.xml.bind:jaxb-api:2.2.12")
 
     compile("io.springfox:springfox-swagger2:2.0.1")
     compile("io.springfox:springfox-swagger-ui:2.0.1")
-    compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3")
     compile("org.apache.commons:commons-lang3:3.4")
-    compile("javax.xml.bind:jaxb-api:2.2.12")
     compile("commons-fileupload:commons-fileupload:1.3.1")
     compile("com.cloudinary:cloudinary-http44:1.2.2")
     compile("org.apache.velocity:velocity:1.7")
